# dev1

./: .env  README.MD  docker-compose.yaml  pyproject.toml
app/: auth.py  config.py  databases.py  dependencies.py  dependenies.py  main.py
models/: speedster.py  users.py
repositories/: speedster.py  users.py
routers/: speedster.py  users.py
schemes/: speedster.py
tests/: conftest.py  test_auth.py
